--- a/pages/biography.html
+++ b/pages/biography.html
@@ -19,7 +19,7 @@
             <li><a href="../pages/biography.html">Biography</a></li>
             <li><a href="../pages/rankings.html">Track list</a></li>
             <li><a href="../pages/memories.html">Memories</a></li>
-            <li><a href="../pages/donate.html">Foundation</a></li>
+            <li><a href="foundation.html">Foundation</a></li>
             <li><a href="../pages/contacts.html">Contacts</a></li>
         </ul>
     </div>
@@ -196,7 +196,7 @@
                     <li><a href="../pages/biography.html">Biography</a></li>
                     <li><a href="../pages/rankings.html">Track list</a></li>
                     <li><a href="../pages/memories.html">Memories</a></li>
-                    <li><a href="../pages/donate.html">Foundation</a></li>
+                    <li><a href="foundation.html">Foundation</a></li>
                     <li><a href="../pages/contacts.html">Contacts</a></li>
                 </ul>
             </div>
