--- a/pages/memories.html
+++ b/pages/memories.html
@@ -2,9 +2,186 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <link rel="icon" href="../assets/images/avicii-logo.svg" type="image/svg+xml">
+    <link rel="stylesheet" href="../styles/default.css">
+    <link rel="stylesheet" href="../styles/memories.css">
+    <title>AVICII</title>
 </head>
 <body>
-
+<div class="top__background">
+    <div class="top">
+        <a href="../index.html"><img class="top__sign" src="../assets/images/avicii-sign.svg" alt="Avicii sign"></a>
+        <ul class="nav">
+            <li><a href="../pages/biography.html">Biography</a></li>
+            <li><a href="../pages/rankings.html">Track list</a></li>
+            <li><a href="../pages/memories.html">Memories</a></li>
+            <li><a href="foundation.html">Foundation</a></li>
+            <li><a href="../pages/contacts.html">Contacts</a></li>
+        </ul>
+    </div>
+</div>
+<div class="first-view">
+    <h1>Memories</h1>
+    <div>
+        <h2>Share Your Memory Of Avicii</h2>
+        <form action="" class="share">
+            <label for="name">Your Name:</label>
+            <input type="text" id="name">
+            <br>
+            <label for="message" class="label__message">Message:</label>
+            <textarea name="message" id="message" cols="30" rows="10"></textarea>
+            <br>
+            <input type="submit" value="Submit" class="share__submit">
+        </form>
+    </div>
+    <div class="memories">
+        <div class="memory">
+            <p class="memory__author"><span class="memory__from">from</span>Marco</p>
+            <p class="memory__message">I had a really bad time in my life; I had fallen into depression. I didn't go out, I didn't talk, etc. .. The only thing that helped me move forward was Tim's music. So if today I arrived at this point in my life I owe it to him too. Thanks Tim, we will never forget you ❤️🙏🏻</p>
+            <p class="memory__date">07. 06. 2019</p>
+        </div>
+        <div class="memory">
+            <p class="memory__author"><span class="memory__from">from</span>Yuko</p>
+            <p class="memory__message">My father was listenig to Avicii. Since then I listen and love Avicii. Thank you TIM</p>
+            <p class="memory__date">08. 06. 2019</p>
+        </div>
+        <div class="memory">
+            <p class="memory__author"><span class="memory__from">from</span>Erika</p>
+            <p class="memory__message">"TIM" is the most beautiful album I have ever listened to. Your music has gotten me through very hard times, and has made the best of times that much better. There are no words to describe your talent and the impact that you have left on the world. I miss you every single day. You are so universally loved and your music will live on forever. Thank you so, so much.</p>
+            <p class="memory__date">12. 06. 2019</p>
+        </div>
+        <div class="memory">
+            <p class="memory__author"><span class="memory__from">from</span>Anthony Santos</p>
+            <p class="memory__message">well his music always helped when i was in a bad mood</p>
+            <p class="memory__date">10. 06. 2019</p>
+        </div>
+        <div class="memory">
+            <p class="memory__author"><span class="memory__from">from</span>Timothée Demars</p>
+            <p class="memory__message">When I was lost, when evrything was going sideways, in my happiest moments, in the most beautiful and important parts of my life your music is always here with me and I couldn't be more thankful about it. My biggest dream was to go to one of your show, sadly it's gonna stay a dream... I hope from where you are you can feel all the love we're sending to you. And it's with a lump in the throat that I'm gonna keep listening to your music in all the upcoming moments that life has to offer. RIP...</p>
+            <p class="memory__date">10. 06. 20019</p>
+        </div>
+        <div class="memory">
+            <p class="memory__author"><span class="memory__from">from</span>Blaze Folf</p>
+            <p class="memory__message">I never met Avicii and i've never seen him perform live but hi music was and still is an inspiration for me we all love you and you music man and we will until the day we join you in the castle in the sky</p>
+            <p class="memory__date">12. 06. 2019</p>
+        </div>
+        <div class="memory">
+            <p class="memory__author"><span class="memory__from">from</span>Allen Wu</p>
+            <p class="memory__message">Avicii made me love house music. His music will always be a part of me that I will never forget. REST IN PEACE TIM. I LOVE WHAT YOU DID FOR THE WORLD. MY LIFE WOULD HAVE BEEN DIFFERENT WITHOUT YOUR MUSIC. <3</p>
+            <p class="memory__date">15. 06. 2019</p>
+        </div>
+        <div class="memory">
+            <p class="memory__author"><span class="memory__from">from</span>Usama Ahmad</p>
+            <p class="memory__message">Dear Tim, Your music has always helped me through the tough times in my life.When i was down the most, I listened to wake me up on repeat for days and it gave me the strength I needed.</p>
+            <p class="memory__date">01. 07. 2019</p>
+        </div>
+        <div class="memory">
+            <p class="memory__author"><span class="memory__from">from</span>Emma</p>
+            <p class="memory__message">i love you tim</p>
+            <p class="memory__date">02. 07. 2019</p>
+        </div>
+        <div class="memory">
+            <p class="memory__author"><span class="memory__from">from</span>chromez voice of Lusaka</p>
+            <p class="memory__message">What an amazing soul who used his talent to craft timeless music that lifted the spirits of many. When I started my radio career, his music career had just started to lift off so you'll always be in my thoughts. Your music takes me back to the time i started all this and it reminds me of how i felt at that time which fuels my passion even more. My condolences to your family, friends and all whom were directly or indirectly inspired by your music. RIP Tim!</p>
+            <p class="memory__date">05. 07. 2019</p>
+        </div>
+        <div class="memory">
+            <p class="memory__author"><span class="memory__from">from</span>Samuel Moses Mendez</p>
+            <p class="memory__message">I never had long lasting friendships but your music always made me feel complete. From True, to Tim. I will always keep these in my heart. I will look forward with the inspiration that comes from every beat of your music. May you truly Rest in Peace.</p>
+            <p class="memory__date">06. 07. 2019</p>
+        </div>
+        <div class="memory">
+            <p class="memory__author"><span class="memory__from">from</span>Bartosz. Chor</p>
+            <p class="memory__message">Your music will be forever in our hearts POLAND</p>
+            <p class="memory__date">06. 07. 2019</p>
+        </div>
+        <div class="memory">
+            <p class="memory__author"><span class="memory__from">from</span>Fahrudin</p>
+            <p class="memory__message">love you forever...</p>
+            <p class="memory__date">08. 07. 2019</p>
+        </div>
+        <div class="memory">
+            <p class="memory__author"><span class="memory__from">from</span>Mike Frietsch</p>
+            <p class="memory__message">Thank you to the family for allowing us to hear the final amazing music made by Tim. Avicii was Avicii, but Tim was Tim. I wish I was able to help him through the hard times he had. I am an introverted person like Tim was and the pressure that comes with fame is not for everyone. I have a hard time with society as a "normal" person, never mind the position in fame. I would not be able to do it. Tim, I hope you rest easy now. Miss you everyday, but your legacy and music will forever be with me.</p>
+            <p class="memory__date">09. 07. 2019</p>
+        </div>
+        <div class="memory">
+            <p class="memory__author"><span class="memory__from">from</span>Roddrigue</p>
+            <p class="memory__message">Sorry if some of my sentences are not clean, I'm French but I'll try to do my best to explain my feelings When I was younger, like so many people, I spent my time to try to find myself. I saw my best friends and my girlfriend that I loved since I was 10, leaving me alone. I never had goods relationships with my family too, and trust me I'm very sociable. But when I heard you, listened to "the nights" or "Trouble", I decided to only trust into you and music's. So thank you to be a part of me ♥️</p>
+            <p class="memory__date">10. 07. 2019</p>
+        </div>
+        <div class="memory">
+            <p class="memory__author"><span class="memory__from">from</span>George Bilias</p>
+            <p class="memory__message">Avicii was the one that made me love music. Since I was really young I was listening to him everywhere I was. Although he is gone he will be forever in our hearts!! I love you Tim and I miss you!!</p>
+            <p class="memory__date">12. 07. 2019</p>
+        </div>
+        <div class="memory">
+            <p class="memory__author"><span class="memory__from">from</span>S</p>
+            <p class="memory__message">I've started listening to his music and it's brilliant. It's sad to imagine what he could've been if he was still alive. RIP.</p>
+            <p class="memory__date">20. 07. 2019</p>
+        </div>
+        <div class="memory">
+            <p class="memory__author"><span class="memory__from">from</span>Sam</p>
+            <p class="memory__message">RIP Avicii, I loved the music from day 1 and to the end, i am so sad i wouldn't ever hear a new song from him. Tim was the true master of EDF and without his music the world wouldn't be the same. There is no one else that is as talented as he was. His music helped me through a lot good and bad times in my life and will keep listening always. Thank you for realising the album Tim</p>
+            <p class="memory__date">21. 07. 2019</p>
+        </div>
+        <div class="memory">
+            <p class="memory__author"><span class="memory__from">from</span>Wbsk</p>
+            <p class="memory__message">One thing he felt it from centre and had the gut to do what he felt right unlike others mainly two types one can't do that but cope up with; and other break the coconut on the former. He is heart felt song remind me of him each moment i listen and heighten him to the Place Genuine. He deserves more.. I feel mourned.</p>
+            <p class="memory__date">25. 07. 2019</p>
+        </div>
+        <div class="memory">
+            <p class="memory__author"><span class="memory__from">from</span>Liam</p>
+            <p class="memory__message">"One day you'll leave this world behind, so live a life you will remember" Thanks for everything Tim. #TeamAvicii</p>
+            <p class="memory__date">25. 07. 2019</p>
+        </div>
+        <div class="memory">
+            <p class="memory__author"><span class="memory__from">from</span>Prashant Singh</p>
+            <p class="memory__message">Let’s just say I think of you almost everyday while listening to your music, be it Hey Brother or You make Me . You are being missed brother! From Golfy with Love</p>
+            <p class="memory__date">26. 07. 2019</p>
+        </div>
+        <div class="memory">
+            <p class="memory__author"><span class="memory__from">from</span>Gustaf</p>
+            <p class="memory__message">I miss you Tim. Your music Will always live forever and be in our hearts and souls. We miss you here from Sweden ◢ ◤</p>
+            <p class="memory__date">26. 07. 2019</p>
+        </div>
+    </div>
+</div>
+<footer>
+    <div class="footer">
+        <div class="footer__main">
+            <div class="footer__about">
+                <h2>About</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid amet asperiores, dolorem eaque
+                    earum
+                    eligendi</p>
+            </div>
+            <div class="footer__links">
+                <h2>Subpages</h2>
+                <ul>
+                    <li><a href="../pages/biography.html">Biography</a></li>
+                    <li><a href="../pages/rankings.html">Track list</a></li>
+                    <li><a href="../pages/memories.html">Memories</a></li>
+                    <li><a href="foundation.html">Foundation</a></li>
+                    <li><a href="../pages/contacts.html">Contacts</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer__second">
+            <div class="footer__copyright">
+                <p>copyright dsfsdf</p>
+            </div>
+            <div>
+                <img src="../assets/images/avicii-logo.svg" alt="Avicii sign">
+                <img src="../assets/images/avicii-logo.svg" alt="Avicii sign">
+                <img src="../assets/images/avicii-logo.svg" alt="Avicii sign">
+            </div>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
