--- a/pages/rankings.html
+++ b/pages/rankings.html
@@ -19,18 +19,18 @@
             <li><a href="../pages/biography.html">Biography</a></li>
             <li><a href="../pages/rankings.html">Ranking</a></li>
             <li><a href="../pages/memories.html">Memories</a></li>
-            <li><a href="../pages/donate.html">Foundation</a></li>
+            <li><a href="foundation.html">Foundation</a></li>
             <li><a href="../pages/contacts.html">Contacts</a></li>
         </ul>
     </div>
 </div>
 <div class="first-view">
     <h1>Tracks ranking</h1>
-    <div>
-        <div class="track">
-            <p class="track__number">1</p>
+    <ul>
+        <li class="track">
+            <p class="track__number"></p>
             <img src="../assets/ep/hey-brother.jpg" class="track__poster" alt="Hey brother">
-            <p class="track__name">Hey brother</p>
+            <p class="track__name">Hey Brother</p>
             <div class="track__buttons">
                 <a href="https://music.youtube.com/watch?v=OjpX8ILe2N4" class="track__play-link">
                     <img src="../assets/icons/youtube.png" class="track__play" alt="Play on Youtube">
@@ -39,10 +39,296 @@
                    class="track__play-link">
                     <img src="../assets/icons/spotify.png" class="track__play" alt="Play on Spotify">
                 </a>
-                <button class="track__up-button">Vote up</button>
+                <input type="button" value="Vote Up" class="track__up-button">
             </div>
-        </div>
-    </div>
+        </li>
+        <li class="track">
+            <p class="track__number"></p>
+            <img src="../assets/ep/heaven.jpg" class="track__poster" alt="Heaven">
+            <p class="track__name">Heaven</p>
+            <div class="track__buttons">
+                <a href="https://music.youtube.com/watch?v=fqzhtvLWefA" class="track__play-link">
+                    <img src="../assets/icons/youtube.png" class="track__play" alt="Play on Youtube">
+                </a>
+                <a href="https://open.spotify.com/track/0vrmHPfoBadXVr2n0m1aqZ?si=d7eaf681849c49e8"
+                   class="track__play-link">
+                    <img src="../assets/icons/spotify.png" class="track__play" alt="Play on Spotify">
+                </a>
+                <input type="button" value="Vote Up" class="track__up-button">
+            </div>
+        </li>
+        <li class="track">
+            <p class="track__number"></p>
+            <img src="../assets/ep/levels.jpg" class="track__poster" alt="Levels">
+            <p class="track__name">Levels</p>
+            <div class="track__buttons">
+                <a href="https://music.youtube.com/watch?v=wDuoOapZ9Z0" class="track__play-link">
+                    <img src="../assets/icons/youtube.png" class="track__play" alt="Play on Youtube">
+                </a>
+                <a href="https://open.spotify.com/track/6Xe9wT5xeZETPwtaP2ynUz?si=b7317e3780384d3c"
+                   class="track__play-link">
+                    <img src="../assets/icons/spotify.png" class="track__play" alt="Play on Spotify">
+                </a>
+                <input type="button" value="Vote Up" class="track__up-button">
+            </div>
+        </li>
+        <li class="track">
+            <p class="track__number"></p>
+            <img src="../assets/ep/wake-me-up.jpeg" class="track__poster" alt="Wake Me Up">
+            <p class="track__name">Wake Me Up</p>
+            <div class="track__buttons">
+                <a href="https://music.youtube.com/watch?v=2NiyrtYegso" class="track__play-link">
+                    <img src="../assets/icons/youtube.png" class="track__play" alt="Play on Youtube">
+                </a>
+                <a href="https://open.spotify.com/track/0nrRP2bk19rLc0orkWPQk2?si=cf4ea8c2b0544102"
+                   class="track__play-link">
+                    <img src="../assets/icons/spotify.png" class="track__play" alt="Play on Spotify">
+                </a>
+                <input type="button" value="Vote Up" class="track__up-button">
+            </div>
+        </li>
+        <li class="track">
+            <p class="track__number"></p>
+            <img src="../assets/ep/the-nights.png" class="track__poster" alt="The Nights">
+            <p class="track__name">The Nights</p>
+            <div class="track__buttons">
+                <a href="https://music.youtube.com/watch?v=W4C-NEWrnSQ" class="track__play-link">
+                    <img src="../assets/icons/youtube.png" class="track__play" alt="Play on Youtube">
+                </a>
+                <a href="https://open.spotify.com/track/0ct6r3EGTcMLPtrXHDvVjc?si=bf4d58bfc0a4401a"
+                   class="track__play-link">
+                    <img src="../assets/icons/spotify.png" class="track__play" alt="Play on Spotify">
+                </a>
+                <input type="button" value="Vote Up" class="track__up-button">
+            </div>
+        </li>
+        <li class="track">
+            <p class="track__number"></p>
+            <img src="../assets/ep/waiting-for-love.jpg" class="track__poster" alt="Waiting For Love">
+            <p class="track__name">Waiting For Love</p>
+            <div class="track__buttons">
+                <a href="https://music.youtube.com/watch?v=iR1sAex__VA" class="track__play-link">
+                    <img src="../assets/icons/youtube.png" class="track__play" alt="Play on Youtube">
+                </a>
+                <a href="https://open.spotify.com/track/2P4OICZRVAQcYAV2JReRfj?si=8d64a3d3cc554ecd"
+                   class="track__play-link">
+                    <img src="../assets/icons/spotify.png" class="track__play" alt="Play on Spotify">
+                </a>
+                <input type="button" value="Vote Up" class="track__up-button">
+            </div>
+        </li>
+        <li class="track">
+            <p class="track__number"></p>
+            <img src="../assets/ep/without-you.jpeg" class="track__poster" alt="Without You">
+            <p class="track__name">Without You</p>
+            <div class="track__buttons">
+                <a href="https://music.youtube.com/watch?v=As_4JTmHuW4" class="track__play-link">
+                    <img src="../assets/icons/youtube.png" class="track__play" alt="Play on Youtube">
+                </a>
+                <a href="https://open.spotify.com/track/6Pgkp4qUoTmJIPn7ReaGxL?si=5fc02e5f5438465b"
+                   class="track__play-link">
+                    <img src="../assets/icons/spotify.png" class="track__play" alt="Play on Spotify">
+                </a>
+                <input type="button" value="Vote Up" class="track__up-button">
+            </div>
+        </li>
+        <li class="track">
+            <p class="track__number"></p>
+            <img src="../assets/ep/you-make-me.jpg" class="track__poster" alt="You Make Me">
+            <p class="track__name">You Make Me</p>
+            <div class="track__buttons">
+                <a href="https://music.youtube.com/watch?v=aD57DeQ7afE" class="track__play-link">
+                    <img src="../assets/icons/youtube.png" class="track__play" alt="Play on Youtube">
+                </a>
+                <a href="https://open.spotify.com/track/52RK8UVEDgUAgpecOpTQM3?si=cc50d864443f4900"
+                   class="track__play-link">
+                    <img src="../assets/icons/spotify.png" class="track__play" alt="Play on Spotify">
+                </a>
+                <input type="button" value="Vote Up" class="track__up-button">
+            </div>
+        </li>
+        <li class="track">
+            <p class="track__number"></p>
+            <img src="../assets/ep/hold-the-line.jpg" class="track__poster" alt="Hold The Line">
+            <p class="track__name">Hold The Line</p>
+            <div class="track__buttons">
+                <a href="https://music.youtube.com/watch?v=Y_SR7V5qglc" class="track__play-link">
+                    <img src="../assets/icons/youtube.png" class="track__play" alt="Play on Youtube">
+                </a>
+                <a href="https://open.spotify.com/track/6EBlOYNcZ8MrdEov9lEdV6?si=2a796a778d224ab8"
+                   class="track__play-link">
+                    <img src="../assets/icons/spotify.png" class="track__play" alt="Play on Spotify">
+                </a>
+                <input type="button" value="Vote Up" class="track__up-button">
+            </div>
+        </li>
+        <li class="track">
+            <p class="track__number"></p>
+            <img src="../assets/ep/fade-into-darkness.jpeg" class="track__poster" alt="Fade Into Darkness">
+            <p class="track__name">Fade Into Darkness</p>
+            <div class="track__buttons">
+                <a href="https://music.youtube.com/watch?v=yKcNdXO4l4w" class="track__play-link">
+                    <img src="../assets/icons/youtube.png" class="track__play" alt="Play on Youtube">
+                </a>
+                <a href="https://open.spotify.com/track/5kwAIpUBwhmiBpsJlcMgO1?si=0b82687d75104310"
+                   class="track__play-link">
+                    <img src="../assets/icons/spotify.png" class="track__play" alt="Play on Spotify">
+                </a>
+                <input type="button" value="Vote Up" class="track__up-button">
+            </div>
+        </li>
+        <li class="track">
+            <p class="track__number"></p>
+            <img src="../assets/ep/i-could-be-the-one.jpeg" class="track__poster" alt="I Could Be The One">
+            <p class="track__name">I Could Be The One</p>
+            <div class="track__buttons">
+                <a href="https://music.youtube.com/watch?v=ppWbG03O_AU" class="track__play-link">
+                    <img src="../assets/icons/youtube.png" class="track__play" alt="Play on Youtube">
+                </a>
+                <a href="https://open.spotify.com/track/1sh6lL6cmlcwhqZKGiKBua?si=acbcc05e0d764852"
+                   class="track__play-link">
+                    <img src="../assets/icons/spotify.png" class="track__play" alt="Play on Spotify">
+                </a>
+                <input type="button" value="Vote Up" class="track__up-button">
+            </div>
+        </li>
+        <li class="track">
+            <p class="track__number"></p>
+            <img src="../assets/ep/broken-arrows.png" class="track__poster" alt="Broken Arrows">
+            <p class="track__name">Broken Arrows</p>
+            <div class="track__buttons">
+                <a href="https://music.youtube.com/watch?v=V5ClukKTIZY" class="track__play-link">
+                    <img src="../assets/icons/youtube.png" class="track__play" alt="Play on Youtube">
+                </a>
+                <a href="https://open.spotify.com/track/260jSxvzkFt71ksvkcy2ke?si=56e4183e39c24256"
+                   class="track__play-link">
+                    <img src="../assets/icons/spotify.png" class="track__play" alt="Play on Spotify">
+                </a>
+                <input type="button" value="Vote Up" class="track__up-button">
+            </div>
+        </li>
+        <li class="track">
+            <p class="track__number"></p>
+            <img src="../assets/ep/seek-bromance.jpg" class="track__poster" alt="Seek Bromance">
+            <p class="track__name">Seek Bromance</p>
+            <div class="track__buttons">
+                <a href="https://music.youtube.com/watch?v=_7WfAlU8jbA" class="track__play-link">
+                    <img src="../assets/icons/youtube.png" class="track__play" alt="Play on Youtube">
+                </a>
+                <a href="https://open.spotify.com/track/7tSO7DrrYpiMXX3zM4b3oM?si=2dcf7df92773497a"
+                   class="track__play-link">
+                    <img src="../assets/icons/spotify.png" class="track__play" alt="Play on Spotify">
+                </a>
+                <input type="button" value="Vote Up" class="track__up-button">
+            </div>
+        </li>
+        <li class="track">
+            <p class="track__number"></p>
+            <img src="../assets/ep/addicted-to-you.jpeg" class="track__poster" alt="Addicted To You">
+            <p class="track__name">Addicted To You</p>
+            <div class="track__buttons">
+                <a href="https://music.youtube.com/watch?v=nYuVZPV4vTw" class="track__play-link">
+                    <img src="../assets/icons/youtube.png" class="track__play" alt="Play on Youtube">
+                </a>
+                <a href="https://open.spotify.com/track/4eDYMhIin1pSLIG96f1aD0?si=0c18295e28e44c2d"
+                   class="track__play-link">
+                    <img src="../assets/icons/spotify.png" class="track__play" alt="Play on Spotify">
+                </a>
+                <input type="button" value="Vote Up" class="track__up-button">
+            </div>
+        </li>
+        <li class="track">
+            <p class="track__number"></p>
+            <img src="../assets/ep/lay-me-down.jpg" class="track__poster" alt="Lay Me Down">
+            <p class="track__name">Lay Me Down</p>
+            <div class="track__buttons">
+                <a href="https://music.youtube.com/watch?v=SON_1EJweKk" class="track__play-link">
+                    <img src="../assets/icons/youtube.png" class="track__play" alt="Play on Youtube">
+                </a>
+                <a href="https://open.spotify.com/track/6ekvzkGg31TOQhHIFEd55x?si=d2abb43c67f54f22"
+                   class="track__play-link">
+                    <img src="../assets/icons/spotify.png" class="track__play" alt="Play on Spotify">
+                </a>
+                <input type="button" value="Vote Up" class="track__up-button">
+            </div>
+        </li>
+        <li class="track">
+            <p class="track__number"></p>
+            <img src="../assets/ep/for-a-better-day.png" class="track__poster" alt="For A Better Day">
+            <p class="track__name">For A Better Day</p>
+            <div class="track__buttons">
+                <a href="https://music.youtube.com/watch?v=FDN8mBsnM6M" class="track__play-link">
+                    <img src="../assets/icons/youtube.png" class="track__play" alt="Play on Youtube">
+                </a>
+                <a href="https://open.spotify.com/track/7kbTZWt7DnzIzbkyzFE1PW?si=3d515c03dc2e4986"
+                   class="track__play-link">
+                    <img src="../assets/icons/spotify.png" class="track__play" alt="Play on Spotify">
+                </a>
+                <input type="button" value="Vote Up" class="track__up-button">
+            </div>
+        </li>
+        <li class="track">
+            <p class="track__number"></p>
+            <img src="../assets/ep/x-you.jpeg" class="track__poster" alt="X You">
+            <p class="track__name">X You</p>
+            <div class="track__buttons">
+                <a href="https://music.youtube.com/watch?v=ZaKOz3vf5JQ" class="track__play-link">
+                    <img src="../assets/icons/youtube.png" class="track__play" alt="Play on Youtube">
+                </a>
+                <a href="https://open.spotify.com/track/1xjdDc5vuFbdYnCMCKNIZG?si=7c4523ed9e0043cf"
+                   class="track__play-link">
+                    <img src="../assets/icons/spotify.png" class="track__play" alt="Play on Spotify">
+                </a>
+                <input type="button" value="Vote Up" class="track__up-button">
+            </div>
+        </li>
+        <li class="track">
+            <p class="track__number"></p>
+            <img src="../assets/ep/lonely-together.jpeg" class="track__poster" alt="Lonely Together">
+            <p class="track__name">Lonely Together</p>
+            <div class="track__buttons">
+                <a href="https://music.youtube.com/watch?v=rFtrb2NzjAk" class="track__play-link">
+                    <img src="../assets/icons/youtube.png" class="track__play" alt="Play on Youtube">
+                </a>
+                <a href="https://open.spotify.com/track/75NhhYjHO43mvZgYtnXgti?si=dcf8f49d85c04ad8"
+                   class="track__play-link">
+                    <img src="../assets/icons/spotify.png" class="track__play" alt="Play on Spotify">
+                </a>
+                <input type="button" value="Vote Up" class="track__up-button">
+            </div>
+        </li>
+        <li class="track">
+            <p class="track__number"></p>
+            <img src="../assets/ep/silhouettes.jpg" class="track__poster" alt="Silhouettes">
+            <p class="track__name">Silhouettes</p>
+            <div class="track__buttons">
+                <a href="https://music.youtube.com/watch?v=Dx807s45y1U" class="track__play-link">
+                    <img src="../assets/icons/youtube.png" class="track__play" alt="Play on Youtube">
+                </a>
+                <a href="https://open.spotify.com/track/06h3McKzmxS8Bx58USHiMq?si=fd881cc2777a45ec"
+                   class="track__play-link">
+                    <img src="../assets/icons/spotify.png" class="track__play" alt="Play on Spotify">
+                </a>
+                <input type="button" value="Vote Up" class="track__up-button">
+            </div>
+        </li>
+        <li class="track">
+            <p class="track__number"></p>
+            <img src="../assets/ep/the-days.jpeg" class="track__poster" alt="The Days">
+            <p class="track__name">The Days</p>
+            <div class="track__buttons">
+                <a href="https://music.youtube.com/watch?v=YLzS4nbMLKw" class="track__play-link">
+                    <img src="../assets/icons/youtube.png" class="track__play" alt="Play on Youtube">
+                </a>
+                <a href="https://open.spotify.com/track/5Iy2Jj87Ha0C0IBlNE1I4y?si=0b707bef545f4bc6"
+                   class="track__play-link">
+                    <img src="../assets/icons/spotify.png" class="track__play" alt="Play on Spotify">
+                </a>
+                <input type="button" value="Vote Up" class="track__up-button">
+            </div>
+        </li>
+    </ul>
+    <input type="button" value="Load More" class="track__load-more">
 </div>
 <footer>
     <div class="footer">
@@ -59,7 +345,7 @@
                     <li><a href="../pages/biography.html">Biography</a></li>
                     <li><a href="../pages/rankings.html">Track list</a></li>
                     <li><a href="../pages/memories.html">Memories</a></li>
-                    <li><a href="../pages/donate.html">Foundation</a></li>
+                    <li><a href="foundation.html">Foundation</a></li>
                     <li><a href="../pages/contacts.html">Contacts</a></li>
                 </ul>
             </div>
