--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <li><a href="pages/biography.html">Biography</a></li>
             <li><a href="pages/rankings.html">Track list</a></li>
             <li><a href="pages/memories.html">Memories</a></li>
-            <li><a href="pages/donate.html">Foundation</a></li>
+            <li><a href="pages/foundation.html">Foundation</a></li>
             <li><a href="pages/contacts.html">Contacts</a></li>
         </ul>
     </div>
@@ -53,7 +53,7 @@
                 </blockquote>
                 <figcaption>On</figcaption>
             </figure>
-            <img src="assets/images/avicii-stature4.png" alt="stature" width="150px">
+            <img src="assets/images/avicii-stature2.png" alt="stature" width="150px">
         </div>
 
         <div class="artist__wrapper">
@@ -67,7 +67,7 @@
                 </blockquote>
                 <figcaption>On</figcaption>
             </figure>
-            <img src="assets/images/avicii-stature4.png" alt="stature" width="150px">
+            <img src="assets/images/avicii-stature2.png" alt="stature" width="150px">
         </div>
 
         <div class="artist__wrapper">
@@ -81,7 +81,7 @@
                 </blockquote>
                 <figcaption>On</figcaption>
             </figure>
-            <img src="assets/images/avicii-stature4.png" alt="stature" width="150px">
+            <img src="assets/images/avicii-stature2.png" alt="stature" width="150px">
         </div>
 
         <div class="artist__wrapper">
@@ -95,7 +95,7 @@
                 </blockquote>
                 <figcaption>On</figcaption>
             </figure>
-            <img src="assets/images/avicii-stature4.png" alt="stature" width="150px">
+            <img src="assets/images/avicii-stature2.png" alt="stature" width="150px">
         </div>
     </div>
 </div>
@@ -114,7 +114,7 @@
                     <li><a href="pages/biography.html">Biography</a></li>
                     <li><a href="pages/rankings.html">Track list</a></li>
                     <li><a href="pages/memories.html">Memories</a></li>
-                    <li><a href="pages/donate.html">Foundation</a></li>
+                    <li><a href="pages/foundation.html">Foundation</a></li>
                     <li><a href="pages/contacts.html">Contacts</a></li>
                 </ul>
             </div>
