--- a/pages/error.html
+++ b/pages/error.html
@@ -20,7 +20,7 @@
             <li><a href="../pages/rankings.html">Track list</a></li>
             <li><a href="../pages/memories.html">Memories</a></li>
             <li><a href="foundation.html">Foundation</a></li>
-            <li><a href="../pages/contacts.html">Contacts</a></li>
+            <li><a href="avicii-fm.html">Contacts</a></li>
         </ul>
     </div>
 </div>
@@ -44,7 +44,7 @@
                     <li><a href="../pages/rankings.html">Track list</a></li>
                     <li><a href="../pages/memories.html">Memories</a></li>
                     <li><a href="foundation.html">Foundation</a></li>
-                    <li><a href="../pages/contacts.html">Contacts</a></li>
+                    <li><a href="avicii-fm.html">Contacts</a></li>
                 </ul>
             </div>
         </div>
