--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <li><a href="pages/rankings.html">Track list</a></li>
             <li><a href="pages/memories.html">Memories</a></li>
             <li><a href="pages/foundation.html">Foundation</a></li>
-            <li><a href="pages/contacts.html">Contacts</a></li>
+            <li><a href="pages/avicii-fm.html">Contacts</a></li>
         </ul>
     </div>
 </div>
@@ -115,7 +115,7 @@
                     <li><a href="pages/rankings.html">Track list</a></li>
                     <li><a href="pages/memories.html">Memories</a></li>
                     <li><a href="pages/foundation.html">Foundation</a></li>
-                    <li><a href="pages/contacts.html">Contacts</a></li>
+                    <li><a href="pages/avicii-fm.html">Contacts</a></li>
                 </ul>
             </div>
         </div>
